# live-pen

./: package-lock.json  package.json
src/: App.vue  config.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Greet.vue  UI.vue
