[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-always-on-top", "window-set-position", "window-set-size", "window-hide", "window-show", "global-shortcut-all", "system-tray", "protocol-asset", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.1.2"
xcap = "0.0.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
